--- a/goodusers/templates/goodusers/goodusers_detail.html
+++ b/goodusers/templates/goodusers/goodusers_detail.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch-icon.png">
-        <link rel="shortcut icon" href="{STATIC_URL}}favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="{{STATIC_URL}}favicon.ico" type="image/x-icon">
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.css">
