--- a/goodusers/templates/goodusers/index.html
+++ b/goodusers/templates/goodusers/index.html
@@ -1,26 +1,45 @@
 <!doctype html>
-<html class="no-js" lang="">
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch-icon.png">
-        <link rel="shortcut icon" href="{{STATIC_URL}}favicon.ico" type="image/x-icon">
-        <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.min.css">
         <link rel="stylesheet" href="{{STATIC_URL}}css/main.css">
-        <script src="{{STATIC_URL}}js/vendor/modernizr-2.8.3.min.js"></script>
+
+        <script src="{{STATIC_URL}}js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">Talented Users of Instagram</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+
+                <article>
+                    <section>
+                        <h2>List of Instagram talents</h2>
 {% if goodusers_list %}
     <ul>
         {% for gooduser in goodusers_list %}
@@ -31,11 +50,34 @@
 <p>No Instagram Talents available in our database.</p>
 
 {% endif %}
+                    </section>
+                    <footer>
+                        <h3>Know an Instagram talent?</h3>
+                        <p>Add your suggestions - let us know which Instagram users you find talented!</p>
+                    </footer>
+                </article>
+
+                <aside>
+                    <h3>Support Talented Users of Instagram Web Site</h3>
+                    <p>Please pread the word!</p>
+                </aside>
+                <aside>
+                    <h3>Browes Talented users by category</h3>
+                    <p>Category1</p>
+                </aside>
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>footer</h3>
+            </footer>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+        <script src="{{STATIC_URL}}js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
