--- a/goodusers/templates/goodusers/goodusers_detail.html
+++ b/goodusers/templates/goodusers/goodusers_detail.html
@@ -1,93 +1,33 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch-icon.png">
+{% extends "base.html" %}
 
-        <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.min.css">
-        <link rel="stylesheet" href="{{STATIC_URL}}css/main.css">
-
-        <script src="{{STATIC_URL}}js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">Talented Users of Instagram</h1>
-                <nav>
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/goodusers/">Browse</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </div>
-
-        <div class="main-container">
+{% block content %}
+    <article>
+        <section>
             <div class="main wrapper clearfix">
+            <section>
+                <h2>@{{good_user.instagram_user_name}}</h2>
+                <h2><a href='{{good_user.instagram_user_profile_page_URL}}' target='_blank'><img src='{{good_user.instagram_profile_picture_URL}}'></img></a></h2>
+            </section>
+            <section>
+                <h3>Instagram data</h3>
+                <p>Number of followers {{good_user.number_of_followers}}</p>
+                <p>Number of followings {{good_user.number_of_followings}}</p>
+                <p>Number of posts {{good_user.number_of_media}}</p>
+            </section>
+            </div>
+        </section>
+        <footer>
+            <h3>Support this Instagram Talent</h3>
+            <p>Bu following, liking and commenting on this talented users photos, you are providing support.</p>
+        </footer>
+    </article>
 
-                <article>
-                    <section>
-                        <div class="main wrapper clearfix">
-                        <section>
-                            <h2>@{{good_user.instagram_user_name}}</h2>
-                            <h2><a href='{{good_user.instagram_user_profile_page_URL}}' target='_blank'><img src='{{good_user.instagram_profile_picture_URL}}'></img></a></h2>
-                        </section>
-                        <section>
-                            <h3>Instagram data</h3>
-                            <p>Number of followers {{good_user.number_of_followers}}</p>
-                            <p>Number of followings {{good_user.number_of_followings}}</p>
-                            <p>Number of posts {{good_user.number_of_media}}</p>
-                        </section>
-                        </div>
-                    </section>
-                    <footer>
-                        <h3>Support this Instagram Talent</h3>
-                        <p>Bu following, liking and commenting on this talented users photos, you are providing support.</p>
-                    </footer>
-                </article>
-
-                <aside>
-                    <h3>Support Talented Users of Instagram Web Site</h3>
-                    <p>Please spread the word!</p>
-                </aside>
-                <aside>
-                    <h3>Browes Talented users by category</h3>
-                    <p>Category1</p>
-                </aside>
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
-        <script src="{{STATIC_URL}}js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
-</html>
+    <aside>
+        <h3>Support Talented Users of Instagram Web Site</h3>
+        <p>Please spread the word!</p>
+    </aside>
+    <aside>
+        <h3>This Talented Photographer is in these categories</h3>
+        <p>Category1</p>
+    </aside>
+{% endblock %}                 
