--- a/nnpicksdj/templates/nnpicksdj/base.html
+++ b/nnpicksdj/templates/nnpicksdj/base.html
@@ -27,7 +27,7 @@
                 <nav>
                     <ul>
                         <li><a href="{% url 'apphome' %}">Home</a></li>
-                        <li><a href="{% url 'index' %}">Browse</a></li>
+                        <li><a href="{% url 'goodusers:index' %}">Browse</a></li>
                         <li><a href="#">Link 3</a></li>
                     </ul>
                 </nav>
