--- a/static/css/main.css
+++ b/static/css/main.css
@@ -156,6 +156,10 @@ nav a:hover {
 
 /* GoodUsers CSS styles ----------------------------------- */
 
+.textaligncenter {
+    text-align: center;
+}
+
 .gublockcontainer {
     float: left;
     border-style: solid;
@@ -181,6 +185,12 @@ nav a:hover {
     padding: 10px;
 }
 
+.igthumbnail {
+    float: left;
+    border-style: solid;
+    border-width: 3px;
+    margin: 1px;
+}
 /* END GoodUsers CSS styles ----------------------------------- */
 
 
