--- a/goodusers/templates/goodusers/index.html
+++ b/goodusers/templates/goodusers/index.html
@@ -7,7 +7,7 @@
 {% if goodusers_list %}
     <ul>
         {% for gooduser in goodusers_list %}
-        <li><a href='{% url 'details' gooduser.instagram_user_name %}'>{{gooduser.instagram_user_name}}</a></li>
+        <li><a href='{% url 'goodusers:details' gooduser.instagram_user_name %}'>{{gooduser.instagram_user_name}}</a></li>
         {% endfor %}
     </ul>
 {% else %}
