--- a/static/css/main.css
+++ b/static/css/main.css
@@ -185,11 +185,16 @@ nav a:hover {
     padding: 10px;
 }
 
-.igthumbnail {
+.igthumbnailcontainer {
     float: left;
     border-style: solid;
-    border-width: 3px;
-    margin: 1px;
+    border-width: 1px;
+    padding: 5px;
+    margin: 10px;
+}
+
+.iglikestxt {
+    font-size: 12px; 
 }
 /* END GoodUsers CSS styles ----------------------------------- */
 
