added Instagram login/partial

--- a/nnpicksdj/templates/nnpicksdj/index.html
+++ b/nnpicksdj/templates/nnpicksdj/index.html
@@ -15,7 +15,7 @@
 
     <aside>
         <h3>Login</h3>
-        <p>XYZ</p>
+        <p><a href='{% url "socialauth_begin" "instagram" %}'>Login with Instagram</a></p>
     </aside>
     
     <aside>
