working on authenticated users and templates

--- a/iguserauth/templates/iguserauth/index.html
+++ b/iguserauth/templates/iguserauth/index.html
@@ -14,9 +14,7 @@
 </article>
 <aside>
     <h3>Logout from SquareSensor</h3>
-    <p>Click here to log out</p>
-    <h3>Disconnect SquareSensor from Instagram</h3>
-    <p><a href='{% url "socialauth_disconnect" "instagram" %}'>Click here to disconnect</a></p>
+    <p><a href='{% url 'login:logout' %}'>Click here to log out</a></p>
 </aside>  
       
 <article>
