--- a/goodusers/templates/goodusers/goodusers_detail.html
+++ b/goodusers/templates/goodusers/goodusers_detail.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block title %}User Details
+{% endblock %}
+
 {% block content %}
     <article>
         <section>
@@ -53,6 +56,7 @@
 	                <p>No photos by @{{good_user.instagram_user_name}} in our database</p>
 	            {% endif %}
 	        </section>
+
         {% else %}
              <p>Instagram username @{{good_user.instagram_user_name}} is not valid.</p>
              <br><br><br><br><br><br><br><br><br><br>
@@ -63,6 +67,16 @@
         </footer>
     </article>
 
+    <aside>
+        <div id="contact_errors">TESTX</div>
+		<form action="" method="post" id="contact_form" accept-charset="utf-8">{% csrf_token %}
+		  <table>
+		  {{form}}
+		  </table>
+		  <p><input value="Send Message" id="send_msg" onclick="send_message();" type="button" /></p>
+		</form>
+
+    </aside>
     <aside>
         <h3>Support Talented Users of Instagram Web Site</h3>
         <p>Please spread the word!</p>
