--- a/nnpicksdj/templates/nnpicksdj/base.html
+++ b/nnpicksdj/templates/nnpicksdj/base.html
@@ -1,3 +1,4 @@
+{% load dajaxice_templatetags %}
 <!doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
@@ -15,6 +16,8 @@
         <link rel="stylesheet" href="{{STATIC_URL}}css/main.css">
 
         <script src="{{STATIC_URL}}js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="{{STATIC_URL}}js/main.js"></script>
+        {% dajaxice_js_import %}
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -23,7 +26,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Talented Users of Instagram</h1>
+                <h1 class="title">SquareSensor {% block title %}{% endblock %}</h1>
                 <nav>
                     <ul>
                         <li><a href="{% url 'apphome' %}">Home</a></li>
@@ -49,13 +52,14 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Copyright 2015 by Funtotalents</h3>
+                <h3>Copyright 2015 by SquareSensor</h3>
             </footer>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+        <script src="{{STATIC_URL}}js/vendor/jquery.ba-serializeobject.min.js"></script>
+        
         <script src="{{STATIC_URL}}js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
