Added categories app and connected to Goodusers

--- a/goodusers/templates/goodusers/goodusers_detail.html
+++ b/goodusers/templates/goodusers/goodusers_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}User Details
+{% block pagetitle %}- User Details @{{good_user.instagram_user_name}}
 {% endblock %}
 
 {% block content %}
