--- a/nnpicksdj/templates/nnpicksdj/base.html
+++ b/nnpicksdj/templates/nnpicksdj/base.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>The Talents of Instagram</title>
+        <title>squaresensor {% block pagetitle %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch-icon.png">
@@ -26,6 +26,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
+            <img src="{{STATIC_URL}}img/squaresensor-final-fill-frame-68x68.png" class="headerimage"></img>
                 <h1 class="title">SquareSensor {% block title %}{% endblock %}</h1>
                 <nav>
                     <ul>
