--- a/categories/templates/categories/index.html
+++ b/categories/templates/categories/index.html
@@ -1,5 +1,22 @@
-{% extends "base.html %}
+{% extends "base.html" %}
+
+{% block pagetitle %} - List of Photo Categories{% endblock %}
 
 {% block content %}
-TEST kategorije
+    <article>
+        <section>
+            <h2>List of Photo Categories</h2>
+{% if categories_list %}
+    <ul>
+        {% for category in categories_list %}
+        <li><a href='{% url 'categories:details' category.slug %}'>{{category.title}}</a></li>
+        {% endfor %}
+    </ul>
+{% else %}
+<p>No Categories available in our database.</p>
+
+{% endif %}
+
+        </section>
+    </article>
 {% endblock %}
