--- a/goodusers/templates/goodusers/index.html
+++ b/goodusers/templates/goodusers/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block pagetitle %} - List of Instagram talents{% endblock %}
 
 {% block content %}
     <article>
@@ -15,6 +16,21 @@
 
 {% endif %}
         </section>
+            <h2>Photo Categories</h2>
+            <p>Browse talented photographers by category</p>
+{% if categories_list %}
+    <ul>
+        {% for category in categories_list %}
+        <li><a href='{% url 'goodusers:users_in_category' category.slug %}'>{{category.title}}</a></li>
+        {% endfor %}
+    </ul>
+{% else %}
+<p>No Instagram Talents available in our database.</p>
+
+{% endif %}        
+        <section>
+        
+        </section>
         <footer>
             <h3>Know an Instagram talent?</h3>
             <p>Add your suggestions - let us know which Instagram users you find talented!</p>
@@ -25,8 +41,5 @@
         <h3>Support Talented Users of Instagram Web Site</h3>
         <p>Please spread the word!</p>
     </aside>
-    <aside>
-        <h3>Browes Talented users by category</h3>
-        <p>Category1</p>
-    </aside>
+
 {% endblock %}                  
