Added categories to goodusers templates, adjusted logo shadow

--- a/goodusers/templates/goodusers/users_in_category.html
+++ b/goodusers/templates/goodusers/users_in_category.html
@@ -17,7 +17,18 @@
 {% else %}
 <p>No Instagram talents in this photo category "{{ category }}" available in our database.</p>
 
-{% if child_categories %}
+{% if goodusers_list_child %}
+    <h3>These users are featured in photo subcategories</h3>
+    <ul>
+        {% for gooduser in goodusers_list_child %}
+        <li><a href='{% url 'goodusers:details' gooduser.instagram_user_name %}'>{{gooduser.instagram_user_name}}</a></li>
+        {% endfor %}
+    </ul>
+{% else %}
+<p>No Instagram talents in photo subcategories available in our database.</p>
+{% endif %}
+
+{% if child_categories and goodusers_list_child %}
     <section>
     <h2>Subcategories</h2>
     <ul>
