--- a/static/css/main.css
+++ b/static/css/main.css
@@ -202,14 +202,23 @@ nav a:hover {
 
 .igthumbnailcontainer {
     float: left;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid #cccccc;
+    box-shadow: 0 5px 5px #B5ACA7; 
     padding: 5px;
     margin: 10px;
+    width: 150px;
+}
+
+.likessection {
+    width: 140px;
+    height: 40px;
+    margin: 3px;
+    padding: 3px;
 }
 
 .iglikestxt {
-    font-size: 12px; 
+    float: left;
+    font-size: 10px; 
 }
 
 .iglikebutton {
@@ -217,21 +226,35 @@ nav a:hover {
     text-align: left;
     font-size: 10px;
     margin: 3px;
-    padding: 3px;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 5px 5px #8F410D;    
+    padding: 1px; 
+    width: 20px;
+    height: 20px;   
 }
+
+.heartimage {
+    width: 18px;
+    height: 18px; 
+    align: center;
+}
+
+.commentsection {
+    width: 140px;
+    height: 90px;
+    margin: 3px;
+    padding: 3px;
+}
+
+
 
 .photocommentformclass {
     float: left;
-    width: 100px;
-    height: 50px;
+    width: 125px;
+    height: 70px;
     margin: 3px;
     padding: 3px;
     border-style: solid;
-    border-width: 1px;
-    box-shadow: 0 5px 5px #8F410D;        
+    border-width: 0px;
+    box-shadow: 0 5px 5px #B5ACA7;        
 }
 
 .igcommentclass {
@@ -239,11 +262,18 @@ nav a:hover {
     font-family: Tahoma, sans-serif;
     border: 3px solid #cccccc;
     float: left;
-    width: 90px;
-    height: 45px;
+    width: 115px;
+    height: 40px;
     outline: none;
     resize: none;
     overflow: auto;
+}
+
+.commentsendbutton {
+    font-size: 9px;
+    font-family: Tahoma, sans-serif;
+    border: 3px solid #cccccc;
+    float: right;
 }
 
 /* END GoodUsers CSS styles ----------------------------------- */
