--- a/nnpicksdj/templates/nnpicksdj/base.html
+++ b/nnpicksdj/templates/nnpicksdj/base.html
@@ -40,7 +40,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="{% url 'dashboard:index' %}">Dashboard</a></li>
+                        <li><a href="{% url 'members:index' %}">Dashboard</a></li>
                         <li><a href="{% url 'goodusers:index' %}">Browse</a></li>
                         <li><a href="{% url 'login:index' %}">My Account</a></li>
                     </ul>
