--- a/static/css/main.css
+++ b/static/css/main.css
@@ -312,6 +312,10 @@ nav a:hover {
     height: 20px;  
 }
 
+.emailformcontainer {
+    padding: 10px;
+}
+
 /* END GoodUsers CSS styles ----------------------------------- */
 
 
